--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Carosello Array di Oggetti</title>
   </head>
   <body>
+    <div class="carousel">
+      <div class="carousel-image">
+        <img src="./img/01.webp" alt="Carousel Image" />
+        <div class="carousel-content">
+          <h2></h2>
+          <p></p>
+        </div>
+      </div>
+    </div>
+    <button class="next-btn carousel-arrow-right">
+      <i class="fa-solid fa-angle-right"></i>
+    </button>
+    <button class="prev-btn carousel-arrow-left">
+      <i class="fa-solid fa-angle-left"></i>
+    </button>
     <script src="./js/script.js"></script>
   </body>
 </html>
